# MatrixLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  MatrixLibConfig.h.in  MatrixLibrary.mk  README.md
include/: CMakeLists.txt  ml_config.h  ml_config.h.in
include/m4ri/: m4ri_config.h
include/matrix/: affine_transform.h
include/matrixlib/: affine_transform.h  matrix_gf2.h  wrandom.h
scripts/: matrixlib_cfg.h.in
src/: CMakeLists.txt
src/matrix/: affine_transform.c  matrix_gf2.c
src/matrixlib/: affine_transform.c  matrix_gf2.c  wrandom.c
test/: CMakeLists.txt  math_test.c  test.c
